web-infras/parser/tests/fixtures/babel/es2015/arrow-functions/invalid-rest-in-params/output.txt
[SyntaxError]: Unexpected trailing comma after rest element. (4,5)
4|    third
 |   ^
